[gd_scene load_steps=5 format=3 uid="uid://dul2pititpkcb"]

[ext_resource type="Script" uid="uid://scbrlodgmekb" path="res://ASSETS/controllers/scripts/player_controller.gd" id="1_dk88v"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_dk88v"]
height = 1.0

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_jka67"]

[sub_resource type="CapsuleMesh" id="CapsuleMesh_i5arm"]

[node name="CharacterBody3D" type="CharacterBody3D"]
script = ExtResource("1_dk88v")

[node name="CameraController" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.75, 0)

[node name="Camera3D" type="Camera3D" parent="CameraController"]
cull_mask = 1048573

[node name="SlidingCollisionShape" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 0)
shape = SubResource("CapsuleShape3D_dk88v")

[node name="StandingCollisionShape" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
shape = SubResource("CapsuleShape3D_jka67")

[node name="Raycasts" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 1, 0)

[node name="GroundCheck" type="RayCast3D" parent="Raycasts"]
exclude_parent = false
target_position = Vector3(0, 0, -1.5)
collide_with_areas = true

[node name="CeilingCheck" type="RayCast3D" parent="Raycasts"]
transform = Transform3D(1, 0, 0, 0, -1, 8.74228e-08, 0, -8.74228e-08, -1, 0, 0, 0)
exclude_parent = false
target_position = Vector3(0, 0, -1.5)
collide_with_areas = true

[node name="WorldModel" type="Node3D" parent="."]

[node name="MeshInstance3D" type="MeshInstance3D" parent="WorldModel"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
mesh = SubResource("CapsuleMesh_i5arm")
skeleton = NodePath("../../StandingCollisionShape")
